<resources>
    <string name="app_name">EE408_Graduation</string>
    <string name="new_user">Create New \nProfile</string>
    <string name="existing_user">Use Existing \nProfile</string>
    <string name="delete_user">Delete Existing \nProfile</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="enter_username">Username</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="select_user_view_header">Select User</string>
    <string name="delete_user_view_header">Delete User</string>
    <string name="gameback">X</string>

    <string name="profile1">Profile 1</string>
    <string name="profile2">Profile 2</string>
    <string name="profile3">Profile 3</string>
    <string name="profile4">Profile 4</string>
    <string name="profile5">Profile 5</string>
    <string name="profile6">Profile 6</string>
</resources>