<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectUser">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="380dp"
        android:layout_height="87dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="190dp"
            android:layout_height="87dp"
            android:text="@string/profile1"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="190dp"
            android:layout_height="87dp"
            android:text="@string/profile2"
            android:textSize="20dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="193dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:text="@string/select_user_view_header"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_marginTop="48dp"
        android:text="@string/play"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <Button
        android:id="@+id/selectBack"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_marginTop="48dp"
        android:text="@string/back"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="380dp"
        android:layout_height="87dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" >

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="190dp"
            android:layout_height="87dp"
            android:text="@string/profile3"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="190dp"
            android:layout_height="87dp"
            android:text="@string/profile4"
            android:textSize="20dp"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="380dp"
        android:layout_height="87dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" >

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="190dp"
            android:layout_height="87dp"
            android:text="@string/profile5"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="190dp"
            android:layout_height="87dp"
            android:text="@string/profile6"
            android:textSize="20dp"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>