<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnrollNewUser">

    <TextView
        android:id="@+id/enrollTitle"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="Enrollment"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enrollConfirm"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_above="@+id/enrollBack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/enrollBack"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/back"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrollConfirm" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="310dp"
        android:layout_height="61dp"
        android:layout_marginTop="104dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/enrollTitle"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_username"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrollTitle" />
</RelativeLayout>